--- a/public/baseballSalaries.css
+++ b/public/baseballSalaries.css
@@ -60,3 +60,9 @@ button{
     align-items: center;
     justify-content:flex-start;
 }
+table{
+    width:30%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: lightblue;
+}
