addded Column Heading sorting

--- a/public/baseballSalaries.css
+++ b/public/baseballSalaries.css
@@ -66,3 +66,7 @@ table{
     margin-right: auto;
     background-color: lightblue;
 }
+th{
+    cursor: pointer;
+    text-decoration: underline;
+}
