--- a/views/highestPaidPlayersPerTeamPerYear.pug
+++ b/views/highestPaidPlayersPerTeamPerYear.pug
@@ -4,16 +4,18 @@ html
 		style 
 			include ../public/baseballSalaries.css 
 		script. 
+			var sortOrder ='!{sortOrder}'
 			function pagereset(){
 				document.getElementById('spin').style="display: inline-block"
 				if(document.getElementById('data')){
 					document.getElementById('data').innerHTML=""
 				}
 			}
+		script(src="../code.js")
 	body 
 		h1= 'Highest Paid Players Per Team Per Year'
 
-	select(onchange="pagereset(); window.location.href='/highestPaidPlayersPerTeamPerYear?yearID='+this.value")
+	select(id="yearID" onchange="pagereset(); window.location.href='/highestPaidPlayersPerTeamPerYear?yearID='+this.value")
 		option(value=0) # Select year 
 		each year in years 
 			option(value=year.yearID selected=(year.yearID==yearID)) #{year.yearID}
@@ -22,10 +24,10 @@ html
 		table(id="data")
 			thead 
 				tr 
-					th Team ID
-					th First name 
-					th Last name 
-					th Salary 
+					th <a onclick="pagereset(); sortData('/highestPaidPlayersPerTeamPerYear', 'teamID')">Team ID</a>
+					th <a onclick="pagereset(); sortData('/highestPaidPlayersPerTeamPerYear', 'fname')">First name</a> 
+					th <a onclick="pagereset(); sortData('/highestPaidPlayersPerTeamPerYear', 'lname')">Last name</a> 
+					th <a onclick="pagereset(); sortData('/highestPaidPlayersPerTeamPerYear','salary')">Salary</a> 
 			tbody
 				each salary in salaries 
 					tr 
