--- a/views/highestPaidPlayersPerTeamPerYear.pug
+++ b/views/highestPaidPlayersPerTeamPerYear.pug
@@ -20,7 +20,8 @@ html
 		each year in years 
 			option(value=year.yearID selected=(year.yearID==yearID)) #{year.yearID}
 	
-	if salaries 
+	if salaries
+		button(onclick="window.location.href='/graphHighestPaidPlayersPerTeamPerYear?yearID='+document.getElementById('yearID').value") Graph  
 		table(id="data")
 			thead 
 				tr 
