--- a/views/teamPayrollPerWinPerYear.pug
+++ b/views/teamPayrollPerWinPerYear.pug
@@ -5,24 +5,24 @@ html
 			include ../public/baseballSalaries.css
 		script.
 			var sortOrder ='!{sortOrder}'
-		script(src="../code.js")
+		script(src="./code.js")
 	body
 		h1='Team Payroll Per Win Per Year'
 
-	select(id="yearID" onchange="window.location.href='/teamPayrollPerWinPerYear?yearID='+this.value")
+	select(id="yearID" onchange="window.location.href='teamPayrollPerWinPerYear?yearID='+this.value")
 		option(value=0) # Select a Year
 		each year in years
 			option(value=year.yearID selected=(year.yearID == yearID)) #{year.yearID}
 
 	if salaries 
-		button(onclick="window.location.href='/graphTeamPayrollPerWinPerYear?yearID='+document.getElementById('yearID').value") Graph 
+		button(onclick="window.location.href='graphTeamPayrollPerWinPerYear?yearID='+document.getElementById('yearID').value") Graph 
 		table 
 			thead 
 				tr 
-					th <a onclick="sortData('/teamPayrollPerWinPerYear', 'teamID')">Team ID</a> 
-					th <a onclick="sortData('/teamPayrollPerWinPerYear','won')">Wins</a>
-					th <a onclick="sortData('/teamPayrollPerWinPerYear','total_sal')">Total PayRoll</a> 
-					th <a onclick="sortData('/teamPayrollPerWinPerYear','cost_per_win')">Cost per win</a>
+					th <a onclick="sortData('teamPayrollPerWinPerYear', 'teamID')">Team ID</a> 
+					th <a onclick="sortData('teamPayrollPerWinPerYear','won')">Wins</a>
+					th <a onclick="sortData('teamPayrollPerWinPerYear','total_sal')">Total PayRoll</a> 
+					th <a onclick="sortData('teamPayrollPerWinPerYear','cost_per_win')">Cost per win</a>
 			tbody 
 				each salary in salaries 
 					tr 
